examples/failing/TypeWildcards2.purs
-- @shouldFailWith ErrorParsingModule
module TypeWildcards where

import Prelude

data Test = Test _

